--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
         <nav class="nav">
 
             <div class="logo">
-                <a href="#"><img src="./logotipo sin fondo sieste y medio.png" alt=""></a>
+                <a href="#"><img src="/logotipo siete y medio.png" alt=""></a>
             </div>
 
             <div class="menu">
